gke/students/api-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: host-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: "studentsapi.com"
    http:
      paths:
      - backend:
          serviceName: students-api-service
          servicePort: 3000
