gke/students/host-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: host-ingress
spec:
  rules:
  - host: "studentsapi.com"
    http:
      paths:
      - path: /api
        backend:
          serviceName: students-api-service
          servicePort: 3000
  - host: "studentsapp.com"
    http:
      paths:
      - path: /app
        frontend:
          serviceName: students-app-service
          servicePort: 4200
